--- a/EasyPeasyTravelApp/package.json
+++ b/EasyPeasyTravelApp/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-gesture-handler": "^2.13.4",
@@ -22,7 +23,8 @@
     "react-native-screens": "^3.27.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-timeline-flatlist": "^0.8.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
