--- a/EasyPeasyTravelApp/package.json
+++ b/EasyPeasyTravelApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EasyPeasyTravelApp",
+  "name": "easypeasytravelapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^18.6.2",
+    "@react-native-firebase/messaging": "^18.6.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -22,7 +23,6 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-step-indicator": "^1.0.3",
-    "react-native-timeline-flatlist": "^0.8.0",
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.3"
   },
@@ -32,13 +32,15 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
+    "@testing-library/react-native": "^12.4.0",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.10",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
